Fixed overflow issue

--- a/app/globals.css
+++ b/app/globals.css
@@ -9,6 +9,7 @@ body, html{
   background-color: #46DDE6; 
   margin: 0;
   padding: 0;
+  overflow-x: hidden;
 }
 
 button{
